############################################
# Changelog of the check_nwc_health plugin #
############################################

2014-09-26 3.1
- add Clavister Firewall (Thanks Dirk Goetz)
- fix GLPluginSNMP, all timeout-like errors are UNKNOWN

2014-09-55 3.0.4
- bugfix in glplugin (tmp-file-paths wrong under epn) (Thanks Sven Nierlein)

2014-09-15 3.0.3.9
- bugfix in bgp error states (Thanks Matthias Gallinger)
- bugfix in f5 pools (Thanks Sven Nierlein)

2014-08-28 3.0.3.8
- bugfix in interface-usage/ifspeed (Thanks Matthias Gallinger)

2014-08-26 3.0.3.7
- bugfix in glpluginsnmp (undef errors with loadbalacer index)

2014-08-25 3.0.3.6
- bugfix in glpluginsnmp / (fritzbox cpu undef-error)

2014-08-22 3.0.3.5
- bugfix in glplugin/uptime because of buggy snmpengineuptime

2014-08-21 3.0.3.4
- bugfix in glplugin/uptime thresholds

2014-08-21 3.0.3.3
- add a hack with --name2 which allows shortening of stupid interface names (make dmz1 from Adaptive Security Appliance 'dmz1' interface)

2014-08-20 3.0.3.2
- update GLPluginSNMP (timeout handling)

2014-08-20 3.0.3.1
- fix interfaces which seem to be 64bit but have no counters

2014-08-19 3.0.3
- bugfix in offline mode
- update GLPlugin
- update GLPluginSNMP

2014-08-15 3.0.2.2
- bugfix in ios memory criticalx/warningx thresholds

2014-08-14 3.0.2.1
- update GLPluginSNMP

2014-08-14 3.0.2
- improve interface-usage performance data
- detect more brocade models

2014-08-13 3.0.1
- bugfix in interface-usage temp-files

2014-08.01 3.0
- jetzt langts mit der ridiseignerei

2014-03-17 3.0x
- massive rewriting of the plugins structure and modules
- repair malformed data returned by Net::SNMP
- add interface-nat-rejects and interface-nat-session-count for IOS
- add hardware-health for cisco asa
- bugfix for old brocade devices and missing cpu/memory oids
- bugfix in Cisco Call Manager
- bugfix in IOS Memory for ASR 9000 image and reserved pool
- bugfix in cisco wlc status
- add hardware-health for cisco pix