@@ -1274,6 +1274,18 @@ $GLPlugin::SNMP::mibs_and_oids = {
     ciscoNatMIBCompliances => '1.3.6.1.4.1.9.10.77.3.1',
     ciscoNatMIBGroups => '1.3.6.1.4.1.9.10.77.3.2',
   },
+  'CISCO-FEATURE-CONTROL-MIB' => {
+    cfcFeatureCtrlTable => '1.3.6.1.4.1.9.9.377.1.1.1',
+    cfcFeatureCtrlEntry => '1.3.6.1.4.1.9.9.377.1.1.1.1',
+    cfcFeatureCtrlIndex => 'CISCO-FEATURE-CONTROL-MIB::CiscoOptionalFeature',
+    cfcFeatureCtrlName => '1.3.6.1.4.1.9.9.377.1.1.1.1.2',
+    cfcFeatureCtrlAction => 'CISCO-FEATURE-CONTROL-MIB::CiscoFeatureAction',
+    cfcFeatureCtrlLastAction => 'CISCO-FEATURE-CONTROL-MIB::CiscoFeatureAction',
+    cfcFeatureCtrlLastActionResult => 'CISCO-FEATURE-CONTROL-MIB::CiscoFeatureActionResult',
+    cfcFeatureCtrlLastFailureReason => '1.3.6.1.4.1.9.9.377.1.1.1.1.6',
+    cfcFeatureCtrlOpStatus => 'CISCO-FEATURE-CONTROL-MIB::CiscoFeatureStatus',
+    cfcFeatureCtrlOpStatusReason => '1.3.6.1.4.1.9.9.377.1.1.1.1.8',
+  },
   'AIRESPACE-SWITCHING-MIB' => {
       bsnSwitching => '1.3.6.1.4.1.14179.1',
       agentInfoGroup => '1.3.6.1.4.1.14179.1.1',
@@ -6290,6 +6302,45 @@ $GLPlugin::SNMP::definitions = {
       2 => 'major',
       3 => 'minor',
       4 => 'info',
+    },
+  },
+  'CISCO-FEATURE-CONTROL-MIB' => {
+    'CiscoOptionalFeature' => {
+      1 => 'ivr',
+      2 => 'fcip',
+      3 => 'fcsp',
+      4 => 'ficon',
+      5 => 'iscsi',
+      6 => 'tacacs',
+      7 => 'qosManager',
+      8 => 'portSecurity',
+      9 => 'fabricBinding',
+      10 => 'iscsiInterfaceVsanMembership',
+      11 => 'ike',
+      12 => 'isns',
+      13 => 'ipSec',
+      14 => 'portTracker',
+      15 => 'scheduler',
+      16 => 'npiv',
+      17 => 'sanExtTuner',
+      18 => 'dpvm',
+      19 => 'extenedCredit',
+    },
+    'CiscoFeatureAction' => {
+      1 => 'noOp',
+      2 => 'enable',
+      3 => 'disable',
+    },
+    'CiscoFeatureStatus' => {
+      1 => 'unknown',
+      2 => 'enabled',
+      3 => 'disabled',
+    },
+    'CiscoFeatureActionResult' => {
+      1 => 'none',
+      2 => 'actionSuccess',
+      3 => 'actionFailed',
+      4 => 'actionInProgress',
     },
   },
 };
